@@ -4,9 +4,11 @@ class RemotePaymillTest < Test::Unit::TestCase
   def setup
     params = fixtures(:paymill)
     @gateway = PaymillGateway.new(public_key: params[:public_key], private_key: params[:private_key])
-
     @amount = 100
     @credit_card = credit_card('5500000000000004')
+    @options = {
+        :email => 'Longbob.Longse@example.com'
+    }
     @declined_card = credit_card('5105105105105100', month: 5, year: 2020)
 
     uri = URI.parse("https://test-token.paymill.com?transaction.mode=CONNECTOR_TEST&channel.id=#{params[:public_key]}&jsonPFunction=paymilljstests&account.number=4111111111111111&account.expiry.month=12&account.expiry.year=2018&account.verification=123&account.holder=John%20Rambo&presentation.amount3D=#{@amount}&presentation.currency3D=EUR")
@@ -19,7 +21,7 @@ class RemotePaymillTest < Test::Unit::TestCase
   end
 
   def test_successful_purchase
-    assert response = @gateway.purchase(@amount, @credit_card)
+    assert response = @gateway.purchase(@amount, @credit_card, @options)
     assert_success response
     assert_equal 'Operation successful', response.message
   end
@@ -32,19 +34,19 @@ class RemotePaymillTest < Test::Unit::TestCase
 
   def test_failed_store_card_attempting_purchase
     @credit_card.number = ''
-    assert response = @gateway.purchase(@amount, @credit_card)
+    assert response = @gateway.purchase(@amount, @credit_card, @options)
     assert_failure response
     assert_equal '[account.number] This field is missing.', response.message
   end
 
   def test_failed_purchase
-    assert response = @gateway.purchase(@amount, @declined_card)
+    assert response = @gateway.purchase(@amount, @declined_card, @options)
     assert_failure response
     assert_equal 'Card declined', response.message
   end
 
   def test_successful_authorize_and_capture
-    assert response = @gateway.authorize(@amount, @credit_card)
+    assert response = @gateway.authorize(@amount, @credit_card, @options)
     assert_success response
     assert_equal 'Operation successful', response.message
     assert response.authorization
@@ -55,7 +57,7 @@ class RemotePaymillTest < Test::Unit::TestCase
   end
 
   def test_successful_authorize_and_capture_with_token
-    assert response = @gateway.authorize(@amount, @token)
+    assert response = @gateway.authorize(@amount, @token, @options)
     assert_success response
     assert_equal 'Operation successful', response.message
     assert response.authorization
@@ -66,20 +68,20 @@ class RemotePaymillTest < Test::Unit::TestCase
   end
 
   def test_successful_authorize_with_token
-    assert response = @gateway.authorize(@amount, @token)
+    assert response = @gateway.authorize(@amount, @token, @options)
     assert_success response
     assert_equal 'Operation successful', response.message
     assert response.authorization
   end
 
   def test_failed_authorize
-    assert response = @gateway.authorize(@amount, @declined_card)
+    assert response = @gateway.authorize(@amount, @declined_card, @options)
     assert_failure response
     assert_equal 'Preauthorisation failed', response.message
   end
 
   def test_failed_capture
-    assert response = @gateway.authorize(@amount, @credit_card)
+    assert response = @gateway.authorize(@amount, @credit_card, @options)
     assert_success response
 
     assert capture_response = @gateway.capture(@amount, response.authorization)
@@ -91,7 +93,7 @@ class RemotePaymillTest < Test::Unit::TestCase
   end
 
   def test_successful_authorize_and_void
-    assert response = @gateway.authorize(@amount, @credit_card)
+    assert response = @gateway.authorize(@amount, @credit_card, @options)
     assert_success response
     assert_equal 'Operation successful', response.message
     assert response.authorization
@@ -102,7 +104,7 @@ class RemotePaymillTest < Test::Unit::TestCase
   end
 
   def test_successful_refund
-    assert response = @gateway.purchase(@amount, @credit_card)
+    assert response = @gateway.purchase(@amount, @credit_card, @options)
     assert_success response
     assert response.authorization
 
@@ -112,7 +114,7 @@ class RemotePaymillTest < Test::Unit::TestCase
   end
 
   def test_failed_refund
-    assert response = @gateway.purchase(@amount, @credit_card)
+    assert response = @gateway.purchase(@amount, @credit_card, @options)
     assert_success response
     assert response.authorization
 
